<resources>
    <string name="app_name">Zigslope</string>
    <string name="radioGroup_text">定位icon</string>
    <string name="nomal_map">普通地图</string>
    <string name="other_map">卫星地图</string>
    <string name="head_map">罗盘地图</string>
    <string name="report_msg">上报信息</string>
    <string name="show_msg">查看详情</string>
    <string name="title">光明边坡</string>
    <string name="setting">网络设置</string>
    <string name="guide">使用指南</string>
    <string name="register">签到打卡</string>
    <string name="feedback">问题反馈</string>
    <string name="userinfo">个人中心</string>

    <string name="type_slope">边坡分布</string>
    <string name="type_weater">防水分布</string>
    <string name="type_fire">防火分布</string>
    <string name="type_house">危房分布</string>

    <string name="net_set">网络设置</string>
    <string name="p_set">权限设置</string>

    <string name="p_cam">相机权限</string>
    <string name="p_sound">录音权限</string>
    <string name="p_flash">存储权限</string>
    <string name="p_loca">定位权限</string>
    <string name="p_net">网络权限</string>
    <string name="p_GPS">GPS权限</string>
    <string name="title_p">个人信息</string>
    <string name="hint_tip">请录入信息</string>
</resources>
